@@ -1,6 +1,6 @@
-dist: trusty
+dist: bionic
 language: java
-jdk: oraclejdk8
+jdk: openjdk11
 install: true
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
